--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,7 @@
 {
     "python.testing.pytestArgs": [
-        "backend"
+        "."
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "python.analysis.extraPaths": [
-        "backend"
-    ]
+    "python.testing.pytestEnabled": true
 }
