--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,8 @@
 frontend/node_modules
 frontend/.env
 
-backend/venv
-backend/__pycache__
-backend/Ciqual.xls
-backend/ssconvert.sh
-backend/static
+venv
+__pycache__
+ciqual/Ciqual.xls
+ciqual/ssconvert.sh
+static
