--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,54 @@
-absl-py==1.4.0
-anyio==3.6.2
-black==24.3.0
-certifi==2023.7.22
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-dnspython==2.3.0
-email-validator==1.3.1
-exceptiongroup==1.2.0
-fastapi==0.92.0
-h11==0.14.0
-httpcore==0.16.3
-httptools==0.5.0
-httpx==0.23.3
-idna==3.7
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.4
-MarkupSafe==2.1.2
-mypy-extensions==1.0.0
-numpy==1.24.1
-orjson==3.9.15
-ortools==9.5.2237
-packaging==23.0
-pathspec==0.11.0
-platformdirs==3.1.0
-pluggy==1.3.0
-protobuf==4.21.12
-pydantic==1.10.5
-pymongo==4.3.3
-pytest==7.4.3
-python-dotenv==0.21.1
-python-multipart==0.0.5
-PyYAML==6.0
-requests==2.28.2
-rfc3986==1.5.0
-six==1.16.0
-sniffio==1.3.0
-starlette==0.25.0
-tomli==2.0.1
-typing_extensions==4.5.0
-ujson==5.7.0
-urllib3==1.26.14
-uvicorn==0.20.0
-watchfiles==0.18.1
-websockets==10.4
+absl-py~=2.1.0
+annotated-types~=0.7.0
+anyio~=4.8.0
+black~=24.10.0
+certifi~=2024.12.14
+charset-normalizer~=3.4.1
+click~=8.1.8
+colorama~=0.4.6
+dnspython~=2.7.0
+email_validator~=2.2.0
+exceptiongroup~=1.2.2
+fastapi~=0.115.6
+h11~=0.14.0
+httpcore~=1.0.7
+httptools~=0.6.4
+httpx~=0.28.1
+idna~=3.10
+immutabledict~=4.2.1
+iniconfig~=2.0.0
+itsdangerous~=2.2.0
+Jinja2~=3.1.5
+MarkupSafe~=3.0.2
+mypy-extensions~=1.0.0
+numpy~=2.2.1
+orjson~=3.10.14
+ortools~=9.11.4210
+packaging~=24.2
+pandas~=2.2.3
+pathspec~=0.12.1
+platformdirs~=4.3.6
+pluggy~=1.5.0
+protobuf~=5.26.1
+pydantic~=2.10.5
+pydantic_core~=2.27.2
+pymongo~=4.10.1
+pytest~=8.3.4
+python-dateutil~=2.9.0.post0
+python-dotenv~=1.0.1
+python-multipart~=0.0.20
+pytz~=2024.2
+PyYAML~=6.0.2
+requests~=2.32.3
+rfc3986~=2.0.0
+six~=1.17.0
+sniffio~=1.3.1
+starlette~=0.41.3
+tomli~=2.2.1
+typing_extensions~=4.12.2
+tzdata~=2024.2
+ujson~=5.10.0
+urllib3~=2.3.0
+uvicorn~=0.34.0
+watchfiles~=1.0.4
+websockets~=14.1
