--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,33 @@
-annotated-types~=0.7.0
-anyio~=4.8.0
-certifi~=2024.12.14
-charset-normalizer~=3.4.1
-click~=8.1.8
-exceptiongroup~=1.2.2
-fastapi~=0.115.6
-h11~=0.14.0
-idna~=3.10
-iniconfig~=2.0.0
-numpy~=2.2.2
-packaging~=24.2
-pluggy~=1.5.0
-pydantic~=2.10.5
-pydantic_core~=2.27.2
-pytest~=8.3.4
-requests~=2.32.3
-scipy~=1.15.1
-sniffio~=1.3.1
-starlette~=0.41.3
-tomli~=2.2.1
-typing_extensions~=4.12.2
-urllib3~=2.3.0
-uvicorn~=0.34.0
+absl-py==2.3.0
+annotated-types==0.7.0
+anyio==4.8.0
+certifi==2024.12.14
+charset-normalizer==3.4.2
+click==8.1.8
+exceptiongroup==1.2.2
+fastapi==0.115.13
+h11==0.14.0
+idna==3.10
+immutabledict==4.2.1
+iniconfig==2.0.0
+numpy==2.2.6
+ortools==9.14.6206
+packaging==24.2
+pandas==2.3.0
+pluggy==1.5.0
+protobuf==6.31.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.4
+scipy==1.15.3
+six==1.17.0
+sniffio==1.3.1
+starlette==0.41.3
+tomli==2.2.1
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.3.0
+uvicorn==0.34.3
