--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Use Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.10
+          python-version: "3.10"
 
       - name: Install Dependencies
         run: make install
