--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+permissions:
+  contents: read
+  pull-requests: write
 jobs:
   release-please:
     runs-on: ubuntu-latest
