Fix debug launch
Signed-off-by: John Gomersall <thegoms@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "main:app",
+                "recipe_estimator.main:app",
                 "--reload"
             ],
             "jinja": true
