--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,7 @@
 github_actions:
 - changed-files:
   - any-glob-to-any-file: '.github/**/*'
+
+javascript:
+- changed-files:
+  - any-glob-to-any-file: 'frontend/package-lock.json'
