Extra test and bit more debug information
Signed-off-by: John Gomersall <thegoms@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
             "module": "uvicorn",
             "args": [
                 "recipe_estimator.main:app",
-                "--reload"
+                "--reload",
+                "--port",
+                "5521"
             ],
             "jinja": true
         }
