--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ ortools==9.14.6206
 packaging==25.0
 pandas==2.3.3
 pluggy==1.6.0
-protobuf==6.33.0
+protobuf
 pydantic==2.12.3
 pydantic_core==2.41.4
 pytest==8.4.2
