--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,20 +1,15 @@
-name: 🚀 Adding the commit to the next release
-on:
-  push:
-    branches:
-      - main
-permissions:
-  contents: read
-  pull-requests: write
-jobs:
+ name: Run release-please
+ on:
+   push:
+     branches:
+       - main
+ jobs:
   release-please:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
-      - id: release
-        uses: googleapis/release-please-action@v4.4.0
+      - uses: googleapis/release-please-action@v4.4.0
         with:
-          # We can't use GITHUB_TOKEN here because, github actions can't trigger actions
-          # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#using-the-github_token-in-a-workflow
-          # So this is a personal access token
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-          release-type: simple
