--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,9 @@
     "typescript": "^5.9.3",
     "web-vitals": "^5.1.0"
   },
+  "overrides": {
+    "typescript": "^5.9.3"
+  },
   "scripts": {
     "start": "PORT=5522 react-scripts start",
     "build": "react-scripts build",
